[package]
name = "oracle-elle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "An Elle-shaped transaction-isolation trace oracle over a recorded operation history (task 75, Phase J1)"

[lints]
workspace = true

[dependencies]
# The search-plane spine this plugs into: `Oracle`/`Bug`/`RunTrace`/`Moment`,
# the pinned fingerprint schema (`mint_fingerprint`/`TerminalSig`/…), and the
# `Record`/`GuestEvent`/`Value` op sources. oracle-elle is a task-64 plugin:
# interfaces live in the consumer (explorer), plugins implement them here — it
# depends only on `explorer` (conventions rule 2 / task-75 surface note).
explorer = { path = "../explorer", version = "0.1.0" }
# Typed, no-panic library errors (rule-5 whitelist).
thiserror = "2"

[dev-dependencies]
# Property tests (>=256 cases): lost-update recovery, serializable-clean,
# G0/G1a on planted histories, verdict determinism.
proptest = "1"
# The offline-property gate stores a RunTrace corpus to disk and re-judges it.
serde_json = "1"
tempfile = "3"
