[package]
name = "sdk-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The host-side SDK evidence reader (task 73): SDK event decode, the assertion catalog + never-fired report, the link-tier Sensor, and the AlwaysViolation Oracle"

[lints]
workspace = true

[dependencies]
# The search-plane spine vocabulary this plugin produces and consumes
# (`GuestEvent`, `Feature`, `Sensor`, `Oracle`, `RunTrace`, `Bug`, `StopReason`,
# `Moment`, `Value`, ŌĆ”). link is a replay-plane plugin built ON the explorer's
# contract (task 64 rule-2 layout), exactly as `runtrace` (task 65) is; it
# depends on `explorer` and nothing else in dissonance. Pinned `version`
# alongside `path` for `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
# The stable `Bug` fingerprint digest ŌĆö the same `sha2` scheme the explorer's
# oracle uses, so a link-minted `Bug` dedups with an explorer-minted one
# (rule-5 whitelist).
sha2 = "0.10"
# Typed, no-panic library errors (rule-5 whitelist).
thiserror = "2"
# The never-fired report round-trips through serde (gate 2), mirroring task 66's
# config-declared catalog format.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Property tests (>=256 cases): decode totality on arbitrary bytes, the catalog
# fold's declared/fired bookkeeping, the sensor's feature stream, and the oracle.
proptest = "1"
# The report round-trip test.
serde_json = "1"
