[package]
name = "sdk-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The host-side SDK ingress boundary (hm-bbx.1): the Antithesis-JSON and internal binary decoders, normalization into persisted SdkSchema + ordered SdkEvent evidence, and the legacy link-tier compatibility surface"

[lints]
workspace = true

[dependencies]
# The search-plane spine vocabulary this plugin produces and consumes
# (`GuestEvent`, `Feature`, `Sensor`, `Oracle`, `RunTrace`, `Bug`, `StopReason`,
# `Moment`, `Value`, …). link is a replay-plane plugin built ON the explorer's
# contract (task 64 rule-2 layout), exactly as `runtrace` (task 65) is; it
# depends on `explorer` and nothing else in dissonance. Pinned `version`
# alongside `path` for `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
# The stable `Bug` fingerprint digest — the same `sha2` scheme the explorer's
# oracle uses, so a link-minted `Bug` dedups with an explorer-minted one
# (rule-5 whitelist).
sha2 = "0.10"
# Typed, no-panic library errors (rule-5 whitelist).
thiserror = "2"
# Normalized `SdkSchema`/`SdkEvent` evidence and the never-fired report round-trip
# through serde (canonical, deterministic); mirrors task 66's config-declared
# catalog format (rule-5 whitelist).
serde = { version = "1", features = ["derive"] }
# The Antithesis-JSON ingress decoder. `arbitrary_precision` keeps every JSON
# number as its original token (never a host `f64`) so numeric-guidance values are
# preserved exactly and normalized into a bounded exact representation on demand
# — the determinism-rule-4 / R-L3 "no state-affecting f64" contract (rule-5
# whitelist: serde_json, std crates only).
serde_json = { version = "1", features = ["arbitrary_precision"] }

[dev-dependencies]
# Property tests (>=256 cases): decode totality on arbitrary bytes/JSON, the
# codec/normalization laws (serde + wire-v2 round-trips, numeric total order), the
# catalog fold, the sensor's feature stream, and the oracle.
proptest = "1"
