[package]
name = "sdk-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The host-side SDK ingress boundary (hm-bbx.1): the Antithesis-JSON and internal binary decoders, normalization into persisted SdkSchema + ordered SdkEvent evidence"

[lints]
workspace = true

[dependencies]
# The persisted `Normalized`'s stream commitment — a blake3 digest over the
# ingress event records (count + digest) that binds an artifact to the *complete*
# stream it decoded from, so a truncated/extended/tampered persisted artifact fails
# to load even though it re-decodes to itself. Matches the repo convention
# (`runtrace`/`film`/`snapshot-store` all commit with blake3; rule-5 whitelist).
blake3 = "1"
# Typed, no-panic library errors (rule-5 whitelist).
thiserror = "2"
# Normalized `SdkSchema`/`SdkEvent` evidence and the never-fired report round-trip
# through serde (canonical, deterministic); mirrors task 66's config-declared
# catalog format (rule-5 whitelist).
serde = { version = "1", features = ["derive"] }
# The Antithesis-JSON ingress decoder. `arbitrary_precision` keeps every JSON
# number as its original token (never a host `f64`) so numeric-guidance values are
# preserved exactly and normalized into a bounded exact representation on demand
# — the determinism-rule-4 / R-L3 "no state-affecting f64" contract (rule-5
# whitelist: serde_json, std crates only).
serde_json = { version = "1", features = ["arbitrary_precision"] }

[dev-dependencies]
# Property tests (>=256 cases): decode totality on arbitrary bytes/JSON and the
# codec/normalization laws (serde + wire-v2 round-trips, numeric total order).
proptest = "1"
