[package]
name = "tactics-regime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bursty calm/storm regime fault tactics + AFLNet-style EnvCodec sequence mutators — the first real Tactic behind the task-64 spine (Phase G1)"

[lints]
workspace = true

[dependencies]
thiserror = "2"
# Task-71 sibling exceptions (spec Environment section, hard rule 2 waived
# exactly this far): `explorer` is the search-plane spine whose `Tactic` this
# crate implements; `environment` is the fault/override vocabulary the tactic
# emits and the mutators rewrite. Pinned `version` alongside `path` for
# `cargo deny`'s wildcard ban.
explorer = { path = "../explorer", version = "0.1.0" }
environment = { path = "../environment", version = "0.1.0" }

[dev-dependencies]
proptest = "1"
